bk_ida/gccida/g3/simplify_binary_operation
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1335:33: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_binary_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1335:48: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_binary_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1344:4: error: expected ';' after expression
rtx pool_constant; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1344:5: error: use of undeclared identifier 'pool_constant'; did you mean 'get_pool_constant'?
rtx pool_constant; // r14 
    ^~~~~~~~~~~~~
    get_pool_constant
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/rtl.h:1305:12: note: 'get_pool_constant' declared here
extern rtx get_pool_constant            PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1349:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1349:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1353:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pool_mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1354:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1355:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1355:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1356:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1357:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1358:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1358:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1377:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1377:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1386:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v56; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1387:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v57; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/simplify-rtx.c:1468:4: error: expected ';' after expression
rtx op; // [rsp+0h] [rbp-98h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_binary_operation/src/obj/simplify-rtx.o] Error 1
